--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
+    "braces": "^3.0.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "clean-css": "^4.2.1",
+    "cryptiles": "^4.1.3",
     "css-loader": "0.28.7",
+    "deep-extend": "^0.6.0",
     "dotenv": "4.0.0",
     "eslint": "^4.10.0",
     "eslint-config-react-app": "^2.0.1",
@@ -23,11 +27,17 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "extend": "^3.0.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "handlebars": "^4.1.2",
+    "hoek": "^6.1.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.11",
+    "macaddress": "^0.2.9",
     "merge": "^1.2.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -35,15 +45,18 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
+    "randomatic": "^3.1.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
+    "react-dev-utils": "^4.2.3",
+    "react-dom": "^16.8.6",
+    "sshpk": "^1.16.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
+    "url-parse": "^1.4.7",
     "webpack": "3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "webpack-dev-server": "^2.11.5",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
