--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cryptiles": "^4.1.3",
     "css-loader": "0.28.7",
     "deep-extend": "^0.6.0",
+    "diff": "^4.0.1",
     "dotenv": "4.0.0",
     "eslint": "^4.10.0",
     "eslint-config-react-app": "^2.0.1",
@@ -39,6 +40,7 @@
     "lodash": "^4.17.11",
     "macaddress": "^0.2.9",
     "merge": "^1.2.1",
+    "nwmatcher": "^1.4.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
